[package]
name = "arceos-vmm"
version = "0.1.0"
edition = "2021"
authors = ["Keyang Hu <976929993@qq.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { path = "../arceos/ulib/axstd", features = ["alloc"], optional = true }
axvm = { path = "../crates/axvm" }
axalloc = { path = "../arceos/modules/axalloc" }
axhal = { path = "../arceos/modules/axhal" }
