[package]
name = "arceos-vmm"
version = "0.1.0"
edition = "2021"
authors = ["Keyang Hu <976929993@qq.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

# System dependent modules provided by ArceOS.
axstd = { path = "../arceos/ulib/axstd", features = ["alloc"], optional = true }
axalloc = { path = "../arceos/modules/axalloc" }
axhal = { path = "../arceos/modules/axhal" }

# System independent crates used for constructing hypervisor.
axvm = { path = "../crates/axvm" }
axerrno = { path = "../arceos/crates/axerrno" }
